Implement deck options presets and default preset
